@@ -27,10 +27,11 @@ public class NowExpression extends ConstantExpression {
 
     @Override
     public Object evaluate(EvaluationContext context) throws Exception {
-        return new Long(System.currentTimeMillis());
+        return Long.valueOf(System.currentTimeMillis());
     }
 
-    public Object getValue() {
-        return new Long(System.currentTimeMillis());
+    @Override
+	public Object getValue() {
+        return Long.valueOf(System.currentTimeMillis());
     }
 }
